# arnold-camera-system

./: .gitignore  README.md  config.toml  pyproject.toml
MvImport/: CamOperation_class.py  pyproject.toml  setup.py
arnold_camera_system/: main.py
arnold_camera_system/camera/hsi/: fx17_wrapper.py
arnold_camera_system/camera/rgb/: mvch250_param_types.py  mvch250_wrapper.py
examples/: fx17_tests.ipynb  test_config.ipynb
examples/DemoUI/: PyUICBasicDemo.py  PyUICBasicDemo.ui  main.py
spectralcam/: README.md  pyproject.toml
spectralcam/spectralcam/: __init__.py  exceptions.py  preview.py  utils.py
spectralcam/spectralcam/gentl/: __init__.py  gentl.py
spectralcam/spectralcam/gige/: __init__.py  gvcp.py  gvsp.c  gvsp.cp311-win_amd64.pyd  setup.py
spectralcam/spectralcam/specim/: __init__.py  fx10.py  fx17.py  fxbase.py
src/: main.py
src/camera/hsi/: fx17_wrapper.py
src/camera/rgb/: mvch250_param_types.py  mvch250_utilities.py  mvch250_wrapper.py
