[project]
name = "arnold-camera-system"
version = "0.1.0"
description = "Controlling Hikrobot GigE RGB and Specim HSI camera for the ARNOLD project at FHNW"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mvimport",
]
authors = [
  {name = "Raffael Schreiber", email = "raffael.schreiber@gmail.com"}
]

[project.optional-dependencies]
notebooks = [
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
]
demo-ui = [
    "pyqt5==5.15.11",
    "pyqt5-qt==5.15.2",
    "pyqt5-sip==12.17.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.9",
]

[tool.uv]
required-environments = [
    "sys_platform == 'win32'"
]

[tool.uv.workspace]
members = [
    "MvImport",
]

[tool.uv.sources]
mvimport = { workspace = true }


