[project]
name = "arnold-camera-system"
version = "0.1.0"
description = "Controlling Hikrobot GigE RGB and Specim HSI camera for the ARNOLD project at FHNW"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "mvimport",
    "numpy~=1.21",
    "genicam>=1.2",
    "psutil>=5.9",
    "vispy>=0.6",
    "spectralcam",
    "opencv-python>=4.11.0.86",
]
authors = [
    { name = "Raffael Schreiber", email = "raffael.schreiber@gmail.com" },
]

[project.optional-dependencies]
notebooks = [
    "ipywidgets>=8.1.7",
 "jupyter>=1.1.1",
 "jupyter-rfb>=0.5.3",
]
demo-ui = ["pyqt5==5.15.11", "pyqt5-qt==5.15.2", "pyqt5-sip==12.17.0"]

[dependency-groups]
dev = ["mypy>=1.17.1", "ruff>=0.12.9"]

[tool.uv]
required-environments = ["sys_platform == 'win32'"]

[tool.uv.workspace]
members = ["MvImport", "spectralcam"]

[tool.uv.sources]
mvimport = { workspace = true }
spectralcam = { workspace = true }

[[tool.mypy.overrides]]
module = [
    "MvCameraControl_class.*",
    "CamOperation_class.*",
    "MvErrorDefine_const",
    "CameraParams_header",
    "cv2",
    "spectralcam.*"
]
ignore_missing_imports = true
