[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MvImport"
version = "0.0.1"  # update to match setup.py
description = "MvImport package for the Arnold camera system"  
readme = "README.md"
requires-python = ">=3.8"  # update to match setup.py
authors = [
    { name = "Hikrobot", email = "global.support@hikrobotics.com" }
]
keywords = ["arnold", "camera", "mvimport"]
[tool.setuptools.packages.find]
where = ["."]